WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216754
REGRESSION (
r257839
): Can't add a memo when transferring funds in First Tech Credit Union App
https://bugs.webkit.org/show_bug.cgi?id=216754
Summary
REGRESSION (r257839): Can't add a memo when transferring funds in First Tech ...
Wenson Hsieh
Reported
2020-09-20 14:07:42 PDT
<
rdar://problem/67045862
>
Attachments
For EWS
(7.52 KB, patch)
2020-09-20 14:55 PDT
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
For EWS (Win build fix)
(7.52 KB, patch)
2020-09-20 14:59 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-09-20 14:55:01 PDT
Comment hidden (obsolete)
Created
attachment 409250
[details]
For EWS
Wenson Hsieh
Comment 2
2020-09-20 14:59:25 PDT
Created
attachment 409251
[details]
For EWS (Win build fix)
EWS
Comment 3
2020-09-21 08:11:49 PDT
Committed
r267345
: <
https://trac.webkit.org/changeset/267345
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409251
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug